[package]
name = "bevy_coroutine_system"
version.workspace = true
edition.workspace = true
description = "A coroutine system for Bevy game engine"
license.workspace = true
repository = "https://github.com/molixianggu/bevy_coroutine_system"
readme = "../README-en.md"
keywords = ["bevy", "coroutine", "game", "async", "yield"]
categories = ["game-development", "asynchronous"]

[dependencies]
bevy = "0.16.1"
bevy_coroutine_system_macro = { path = "../bevy_coroutine_system_macro", version = "0.1.0" }

[dev-dependencies]
bevy = "0.16.1"
ureq = "3.1.0"

