[package]
name = "bevy_coroutine_system_macro"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for bevy_coroutine_system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/molixianggu/bevy_coroutine_system"
keywords = ["bevy", "coroutine", "macro", "game", "async"]
categories = ["game-development", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
