[package]
name = "bevy_coroutine_system_macro"
version.workspace = true
edition.workspace = true
description = "Procedural macros for bevy_coroutine_system"
license.workspace = true
repository = "https://github.com/molixianggu/bevy_coroutine_system"
keywords = ["bevy", "coroutine", "macro", "game", "async"]
categories = ["game-development", "asynchronous"]
readme = "../README-en.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
